feat: stash setting 관련 프로퍼티 최신화 (#36)
